src/objects/Certification__c.object
<CustomObject>
    <description>Used to track certifications.</description>
    <fields>
        <fullName>Certification_Description__c</fullName>
        <description>Description of the certification.</description>
        <label>Certification Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Certified_Professionals__c</fullName>
        <description>Number of certified professionals for this certification.</description>
        <label># of Certified Professionals</label>
        <summaryForeignKey>Certification_Held__c.Certification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of certification.</description>
        <inlineHelpText>Active - Certification is currently being given.
Retired - Certification is no longer being given.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certification_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Number_of_Certified_Professionals__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>